--- a/src/components/map/map.css
+++ b/src/components/map/map.css
@@ -1,46 +1,38 @@
-.map-h2 {
-  text-transform: uppercase;
-  font-size: 1rem;
-  padding: 20px;
-  padding-left: 10px;
-  text-align: center;
-}
-
 .google-map {
-  width: 320px;
-  height: 320px;
+    width: 320px;
+    height: 320px;
 }
 
 .pin {
-  display: flex;
-  align-items: center;
-  width: 80px;
-  color: var(--main-blue);
+    display: flex;
+    align-items: center;
+    width: 180px;
+    color: var(--main-blue);
 }
 
 .pin-icon {
-  font-size: 2rem;
+    font-size: 4rem;
 }
 
 .pin-text {
-  font-size: 1em;
+    font-size: 1.3em;
 }
 
 @media screen and (min-width: 799px) {
-  .google-map {
-    height: 320px;
-  }
+    .google-map {
+        height: 80vh;
+    }
 
-  .map-h2 {
-    font-size: 1.3rem;
-    font-weight: 400;
-  }
+    .map-h2 {
+        font-size: 1.3rem;
+        font-weight: 400;
+    }
 
-  /* .pin {
-    width: 15vw;
-  }
+    .pin {
+        width: 15vw;
+    }
 
-  .pin-icon {
-    font-size: 10vw;
-  } */
+    .pin-icon {
+        font-size: 10vw;
+    }
 }
