--- a/src/components/css/style.css
+++ b/src/components/css/style.css
@@ -15,9 +15,14 @@
 
 .BrandName {
   font-weight: bold;
+  color: #C0D6DF;
 }
 
 .NavHeader {
   margin-bottom: 20px;
+  background-color: #4F6D7A;
 }
 
+#root {
+  background-color: #EAEAEA;
+}
