added map div under card

--- a/src/components/css/style.css
+++ b/src/components/css/style.css
@@ -14,12 +14,26 @@
   margin-bottom: 20px;
 }
 
-/* CARD STYLE */
+.GeneCard {
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+  margin: 50px 0;
+}
+
+/* MAP SECTION */
+.map-body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
+/* CARD SECTION */
 .card-body {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 50px;
 }
 
 .business-card {
@@ -60,3 +74,4 @@
 .business-card-back {
   transform: rotateY(180deg);
 }
+
